# fmdt_python_clean

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  data_analysis.r  database_12mm.csv  database_6mm.csv  demo.py  docs_use_args.py  docs_use_gt.py  draco12_data.csv  fmdt_check.py  ground_truth.py  human_detections.csv  human_detections_draco12.csv  is_human_detected.py  light_min_max.py  load_meteors.py  mkdocs.yml  movement_stats.py  new_testing.py  pyproject.toml  requirements.txt  run_args.sh  setup.py  split_window.py  sql_stuff.py  sqlite.py  test_db.py  test_detect_folder.py  test_draco.py  test_ground_truth.py  videos.db  windows_test.py
data/: all_data_analysis.r  best_d12.csv  best_d6.csv  best_win_clips.csv  best_window_new.csv  data_Draconids-6mm1.30-2050-173800.csv  draco12_gt_300.txt  draco6_data.csv  draco6_gt_1500.txt  draco6_gt_300.txt  human_detections.csv  human_detections_demo.csv  human_detections_draco6.csv  human_detections_window.csv  video_list.csv  videos.db
docs/: index.md  installation.md  iz_one_and_only.md
docs/explanation/: index.md  video_database.md
docs/fmdt/modules/: api.md  args.md
docs/howto/: 0_initialization.md  1_video_decomposition.md  2_test_db.md  3_load_videos.md  4_use_the_cache.md  5_use_video.md
docs/reference/: api.md  args.md  home.md  res.md
docs/tutorials/: 0_start.md  1_detecting_meteors.md  2_Load_Tracked_Objects.md  3_Playing_with_args.md  4_Retrieving_numerical_results.md  Load_Tracked_Objects.md  detecting_meteors.md
examples/: demo.py  docs_use_gt.py  ex0_detect_tracks.txt  ex1_detect_tracks.txt  test.py  test_detect_folder.py  test_draco.py  test_ground_truth.py  test_ground_truth_laptop.py
fmdt/: __init__.py  __test__.py  api.py  args.py  config.py  core.py  db.py  download.py  exceptions.py  res.py  stats.py  tests.py  truth.py  utils.py
fmdt/tests/: api.py  args.py  core.py  detect.py
scripts/: explore_config.py  ground_truth.py  is_human_detected.py  light_min_max.py  load_meteors.py  movement_stats.py  new_testing.py  run_args_results.py
