[build-system]
requires = ["setuptools"]
# build-backend = "hatchling.build"

[tool.setuptools.packages.find]
exclude = ["*.csv", "*.txt", "*.mp4"]

[project]
name = "fmdt-python"
version = "0.0.46"
authors = [
  { name="Evan Voyles", email="ejovo13@yahoo.com" },
]
description = "utlity functions for fast meteor detection toolbox"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy", "ffmpeg-python", "requests", "termcolor", "matplotlib", "pandas", "jsonpickle", "appdirs", "Deprecated"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"fmdt" = "https://github.com/alsoc/fmdt"
"Homepage" = "https://github.com/ejovo13/fmdt_scripts"
